<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/wrapper_background"
    tools:context="com.example.chand.crm.activities.Login_Activity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_personlogin"
        android:paddingTop="20dp">

    </ImageView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="307dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="05dp"
        app:cardElevation="08dp">

        <ScrollView
            android:id="@+id/content_scroller"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="50dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputUid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    app:hintTextAppearance="@color/white">

                    <EditText
                        android:id="@+id/uid"
                        android:layout_width="match_parent"
                        android:layout_height="69dp"
                        android:focusableInTouchMode="true"
                        android:hint="@string/prompt_email"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        app:hintAnimationEnabled="false" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    app:hintTextAppearance="@color/white"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        app:hintAnimationEnabled="false" />
                </android.support.design.widget.TextInputLayout>
                <CheckBox
                    android:id="@+id/remember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Remember"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/login_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>
