<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cat1_color_disable"
    tools:context="com.example.chand.crm.forms.Main_forms">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbaraction"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/topactionsbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/backarrow"
                android:layout_width="37sp"
                android:layout_height="37sp"
                android:layout_alignParentStart="true"
                android:background="@drawable/ic_arrow_back_black_24dp" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        android:layout_below="@+id/toolbaraction"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="center">
            <Button
                android:id="@+id/buttonShowDropDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Select Your Services" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:id="@+id/content_scroller"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:paddingBottom="55dp"
        android:layout_below="@+id/card1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@android:color/white"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/step2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:layout_marginRight="100dp"
                        android:textColor="@color/colorPrimary" />
                    <Spinner
                        android:id="@+id/appli_Type"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:dropDownSelector="@color/colorPrimary"
                        android:paddingTop="20dp"
                        android:spinnerMode="dropdown" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/Name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimaryDark">

                        <EditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Name"
                            android:textColor="@color/background_black"
                            android:textSize="12sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/surname_fn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/surnam"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Surname"
                            android:textColor="@color/background_black"
                            android:textSize="12sp" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/status_et"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Gender"
                        android:textSize="12sp"
                        android:lineSpacingExtra="@dimen/activity_vertical_margin"
                        android:textColorHint="@color/colorPrimary"/>

                        <RadioGroup
                            android:id="@+id/rb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:textColor="@color/colorPrimary"
                            android:orientation="horizontal"
                            android:textSize="12sp" >
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Male"
                                android:checked="true"
                                android:textColor="@color/colorPrimary"
                                android:id="@+id/male"/>

                            <RadioButton
                                android:id="@+id/female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Female"
                                android:textColor="@color/colorPrimary" />

                            <RadioButton
                                android:id="@+id/other"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Other"
                                android:textColor="@color/colorPrimary" />
                        </RadioGroup>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/india"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <TextView
                            android:id="@+id/birthoutofindia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placeof"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />
                        <RadioGroup
                            android:id="@+id/rb2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:textColor="@color/colorPrimary"
                            android:orientation="horizontal"
                            android:textSize="12sp" >
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Yes"
                            android:checked="true"
                            android:textColor="@color/colorPrimary"
                            android:id="@+id/yes"/>
                            <RadioButton
                            android:id="@+id/no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="No"
                            android:textColor="@color/colorPrimary" />
                        </RadioGroup>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/dob_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/dobirth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="Date of Birth"
                            android:drawableEnd="@drawable/calendarnew"
                            android:drawablePadding="5dp"
                            android:textColor="@color/background_black"
                            android:textSize="12sp" />
                    </android.support.design.widget.TextInputLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:layout_marginRight="115dp"
                        android:textColor="@color/colorPrimary" />
                    <Spinner
                        android:id="@+id/statusmarried"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:dropDownSelector="@color/colorPrimary"
                        android:spinnerMode="dropdown" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/vilage_town_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/village_town"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="Village or Town or City *"
                            android:textColor="@color/background_black"
                            android:textSize="12sp" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="100dp"
                        android:text="@string/employmet"
                        android:textColor="@color/colorPrimary" />

                    <Spinner
                        android:id="@+id/employtype"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:dropDownSelector="@color/colorPrimary"
                        android:spinnerMode="dropdown" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/aharnum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/adhar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="12"
                        android:maxLength="12"
                        android:hint="Adhaar Number"
                        android:textColor="@color/background_black"
                        android:textSize="12sp"
                        android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/card2"
            app:cardBackgroundColor="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/step3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvplaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">
                <EditText
                    android:id="@+id/adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/background_black"
                    android:textSize="12sp"
                    android:hint="Resident Address"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>
                <!--<fragment-->
                    <!--android:id="@+id/place_autocomplete_fragment"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="10"
                    android:ems="10"
                    android:hint="Contact Number"
                    android:textColor="@color/background_black"
                    android:textSize="12sp"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
        </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>


    <android.support.v7.widget.CardView
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="30dp"
            android:layout_gravity="end|center_vertical">

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:enabled="false"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>








